syntax = "proto3";
package cosmos.accounts.defaults.lockup.v1;

import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/accounts/defaults/lockup/v1/lockup.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "cosmossdk.io/x/accounts/defaults/lockup/v1";

// MsgInitLockupAccount defines a message that enables creating a lockup account.
message MsgInitLockupAccount {
  option (amino.name)      = "cosmos-sdk/MsgInitLockupAccount";
  option (gogoproto.equal) = true;

  // owner of the vesting account
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // end_time is end of lockup
  google.protobuf.Timestamp end_time = 2
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
  // start_time is start of lockup
  google.protobuf.Timestamp start_time = 3
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
}

// MsgInitLockupAccountResponse defines the Msg/InitLockupAccount response type.
message MsgInitLockupAccountResponse {}

// MsgInitPeriodicLockingAccount defines a message that enables creating a periodic locking
// account.
message MsgInitPeriodicLockingAccount {
  option (amino.name)      = "cosmos-sdk/MsgInitPeriodLockupAccount";
  option (gogoproto.equal) = false;

  // owner of the lockup account
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // start of lockup
  google.protobuf.Timestamp start_time = 2
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
  repeated Period locking_periods = 3 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgInitPeriodicLockingAccountResponse defines the Msg/InitPeriodicLockingAccount
// response type.
message MsgInitPeriodicLockingAccountResponse {}

// MsgDelegate defines a message that enable lockup account to execute delegate message
message MsgDelegate {
  option (cosmos.msg.v1.signer)      = "sender";
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  // sender is the owner of the lockup account
  string                   sender            = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string                   validator_address = 2 [(cosmos_proto.scalar) = "cosmos.ValidatorAddressString"];
  cosmos.base.v1beta1.Coin amount            = 3 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUndelegate defines a message that enable lockup account to execute undelegate message
message MsgUndelegate {
  option (cosmos.msg.v1.signer)      = "sender";
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string                   sender            = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string                   validator_address = 2 [(cosmos_proto.scalar) = "cosmos.ValidatorAddressString"];
  cosmos.base.v1beta1.Coin amount            = 3 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgWithdrawReward defines a message that enable lockup account to execute withdraw reward message
message MsgWithdrawReward {
  option (cosmos.msg.v1.signer)      = "sender";
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string sender            = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string validator_address = 2 [(cosmos_proto.scalar) = "cosmos.ValidatorAddressString"];
}

// MsgSend defines a message that enable lockup account to execute send message
message MsgSend {
  option (cosmos.msg.v1.signer)      = "sender";
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string   sender                          = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string   to_address                      = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable)     = false,
    (amino.dont_omitempty)   = true,
    (amino.encoding)         = "legacy_coins",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// MsgExecuteMessagesResponse defines the response for lockup execute operations
message MsgExecuteMessagesResponse {
  repeated google.protobuf.Any responses = 1;
}
